--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "start" : "node --env-file .env index.js",
+    "start": "node --env-file .env index.js",
     "dev": "node --watch --trace-warnings --env-file=.env index.js"
   },
   "dependencies": {
@@ -19,6 +19,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.2",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.3"
   }
 }
